--- a/SitecoreCDPSln/src/Feature/Components/code/Views/HomeHero/Index.cshtml
+++ b/SitecoreCDPSln/src/Feature/Components/code/Views/HomeHero/Index.cshtml
@@ -1,6 +1,4 @@
-﻿<div>Home Hero</div>
-
-@Html.Sitecore().Field("heading")
+﻿@Html.Sitecore().Field("heading")
 @Html.Sitecore().Field("content")
 @Html.Sitecore().Field("buttontext")
 @Html.Sitecore().Field("buttonId")
