--- a/SitecoreCDPSln/src/Feature/Components/code/Views/TabContent/Index.cshtml
+++ b/SitecoreCDPSln/src/Feature/Components/code/Views/TabContent/Index.cshtml
@@ -1,1 +1,4 @@
-﻿<div>Tab Content Page</div>
+﻿@Html.Sitecore().Field("heading")
+@Html.Sitecore().Field("content")
+@Html.Sitecore().Field("buttontext")
+@Html.Sitecore().Field("buttonId")
