--- a/SitecoreCDPSln/src/Feature/Components/code/Views/CDPIdentification/GetIdentification.cshtml
+++ b/SitecoreCDPSln/src/Feature/Components/code/Views/CDPIdentification/GetIdentification.cshtml
@@ -4,51 +4,51 @@
 {
     <div>
         <div class="mb-3">
-            <label for="@Model.FirstName" class="form-label">@Model.FirstName</label>
-            <input class="form-control" id="@Model.FirstName">
+            <label for="@Model.FirstName" class="form-label">First Name</label>
+            <input type="text" id="textFirstName" class="form-control" value="@Model.FirstName">
         </div>
         <div class="mb-3">
-            <label for="@Model.LastName" class="form-label">@Model.LastName</label>
-            <input class="form-control" id="@Model.LastName">
+            <label for="@Model.LastName" class="form-label">Last Name</label>
+            <input type="text" id="textLastName" class="form-control" value="@Model.LastName">
         </div>
         <div class="mb-3">
-            <label for="@Model.Email" class="form-label">@Model.Email</label>
-            <input class="form-control" id="@Model.Email">
+            <label for="@Model.Email" class="form-label">Email</label>
+            <input type="text" id="textEmail" class="form-control" value="@Model.Email">
         </div>
         <div class="mb-3">
-            <label for="@Model.Gender" class="form-label">@Model.Gender</label>
-            <input class="form-control" id="@Model.Gender">
+            <label for="@Model.Gender" class="form-label">Gender</label>
+            <input type="text" id="textGender" class="form-control" value="@Model.Gender">
         </div>
         <div class="mb-3">
-            <label for="@Model.Dob" class="form-label">@Model.Dob</label>
-            <input class="form-control" id="@Model.Dob">
+            <label for="@Model.Dob" class="form-label">Date of Birth</label>
+            <input type="text" id="textDob" class="form-control" value="@Model.Dob">
         </div>
         <div class="mb-3">
-            <label for="@Model.PassportNumber" class="form-label">@Model.PassportNumber</label>
-            <input class="form-control" id="@Model.PassportNumber">
+            <label for="@Model.PassportNumber" class="form-label">Passport Number</label>
+            <input type="text" id="textPassportNumber" class="form-control" value="@Model.PassportNumber">
         </div>
         <div class="mb-3">
-            <label for="@Model.Mobile" class="form-label">@Model.Mobile</label>
-            <input class="form-control" id="@Model.Mobile">
+            <label for="@Model.Mobile" class="form-label">Mobile Number</label>
+            <input type="text" id="textMobile" class="form-control" value="@Model.Mobile">
         </div>
         <div class="mb-3">
-            <label for="@Model.Street" class="form-label">@Model.Street</label>
-            <input class="form-control" id="@Model.Street">
+            <label for="@Model.Street" class="form-label">Street</label>
+            <input type="text" id="textStreet" class="form-control" value="@Model.Street">
         </div>
         <div class="mb-3">
-            <label for="@Model.City" class="form-label">@Model.City</label>
-            <input class="form-control" id="@Model.City">
+            <label for="@Model.City" class="form-label">City</label>
+            <input type="text" id="textCity" class="form-control" value="@Model.City">
         </div>
         <div class="mb-3">
-            <label for="@Model.Country" class="form-label">@Model.Country</label>
-            <input class="form-control" id="@Model.Country">
+            <label for="@Model.Country" class="form-label">Country</label>
+            <input type="text" id="textCountry" class="form-control" value="@Model.Country">
         </div>
         <div class="mb-3">
-            <label for="@Model.PostalCode" class="form-label">@Model.PostalCode</label>
-            <input class="form-control" id="@Model.PostalCode">
+            <label for="@Model.PostalCode" class="form-label">Postal Code</label>
+            <input type="text" id="textPostalCode" class="form-control" value="@Model.PostalCode">
         </div>
         <div class="mb-3">
-            <input  type="button" class="form-control btn btn-primary" id="btnSubmitIdentityForm">
+            <input  type="button" class="form-control btn btn-primary" value="Submit" id="btnSubmitIdentityForm">
         </div>
     </div>
 }
