--- a/SitecoreCDPSln/src/Feature/Components/code/Views/CodeContent/Index.cshtml
+++ b/SitecoreCDPSln/src/Feature/Components/code/Views/CodeContent/Index.cshtml
@@ -22,7 +22,7 @@
 <script type="text/javascript">
 
     window.onload = function () {
-        triggerEventOnView();
+        //triggerEventOnView();
     };
 
     //Trigger Search Event - Queue Push
