--- a/SitecoreCDPSln/src/Project/Website/code/Views/_maincdplayout.cshtml
+++ b/SitecoreCDPSln/src/Project/Website/code/Views/_maincdplayout.cshtml
@@ -14,7 +14,27 @@
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/owl.carousel.css" rel="stylesheet" />
     <link href="~/Content/owl.theme.default.min.css" rel="stylesheet" />
+    <script type="text/javascript">
+        // Define the Boxever queue
+        var _boxeverq = _boxeverq || [];
 
+        // Define the Boxever settings
+        var _boxever_settings = {
+            client_key: 'pqsmpg99hzkfe1za3socuk3x1d6cvv69', // Replace with your client key
+            target: 'https://api.boxever.com/v1.2', // Replace with your API target endpoint specific to your data center region
+            cookie_domain: '.sitecorecdp.local', // Replace with the top level cookie domain of the website that is being integrated e.g ".example.com" and not "www.example.com"
+            javascriptLibraryVersion: 'v1.2', // Replace with the latest Boxever JavaScript library version"
+            pointOfSale: 'BootCamp_Altudo_POS', // Replace with the same point of sale configured in system settings"
+            web_flow_target: 'https://d35vb5cccm4xzp.cloudfront.net', // Replace with path for the Amazon CloudFront CDN for Sitecore Personalize"
+            web_flow_config: { async: false, defer: false } // Customize the async and defer script loading attributes
+        };
+        // Import the Boxever library asynchronously
+        (function () {
+            var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+            s.src = 'https://d1mj578wat5n4o.cloudfront.net/boxever-1.4.8.min.js';
+            var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+        })();
+    </script>
 </head>
 <body>
     <div>
