changes after day 1 session

--- a/SitecoreCDPSln/src/Feature/Components/code/Views/CodeContent/Index.cshtml
+++ b/SitecoreCDPSln/src/Feature/Components/code/Views/CodeContent/Index.cshtml
@@ -38,7 +38,7 @@
             }
             //Add UTM params
             viewEvent = Boxever.addUTMParams(viewEvent);
-            Boxever.eventCreate(viewEvent, function (data) { alert(JSON.stringify(data)); }, 'json');
+            Boxever.eventCreate(viewEvent, function (data) { }, 'json');
         });
     }
 
