--- a/SitecoreCDPSln/src/Project/Website/code/Views/_maincdplayout.cshtml
+++ b/SitecoreCDPSln/src/Project/Website/code/Views/_maincdplayout.cshtml
@@ -328,7 +328,7 @@
                 "language": "EN",
                 "currency": "EUR",
                 "page": "IdentityPage",
-                "pos": "BootCamp_MVC_CDP",
+                "pos": window._boxever_settings.pointOfSale,
                 "browser_id": Boxever.getID(),
                 "email": email,
                 "title": "Mr",
